--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.4.1
 boto3==1.20.34
 botocore==1.23.34
+certifi==2023.11.17
+charset-normalizer==3.3.2
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
@@ -8,13 +11,20 @@ django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.3
 gunicorn==20.1.0
+idna==3.4
 jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==9.0.0
 psycopg2-binary==2.9.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2021.3
+requests==2.31.0
 requests-oauthlib==1.3.0
 s3transfer==0.5.0
+setuptools==69.0.2
+six==1.16.0
 sqlparse==0.4.2
 stripe==2.64.0
+urllib3==1.26.18
